syntax = "proto3";

package fireflychat.billing.v1;

import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option java_package = "fireflychat.billing.v1";
option java_outer_classname = "BillingServiceProto";

message ProjectBalance {
  int64 temp_tokens = 1;
  google.protobuf.Timestamp temp_expires_at = 2;
  int64 permanent_tokens = 3;
}

message CheckinRequest {
  string request_id = 1;
  int64 user_id = 2;
  string project_key = 3;
}

message CheckinResponse {
  bool success = 1;
  int64 tokens_granted = 2;
  ProjectBalance project_balance = 3;
  bool already_checked_in = 4;
  string error_message = 5;
}

message GetCheckinStatusRequest {
  int64 user_id = 1;
  string project_key = 2;
}

message GetCheckinStatusResponse {
  bool checked_in_today = 1;
  google.protobuf.Timestamp last_checkin_date = 2;
  int64 tokens_granted_today = 3;
}

message RedeemCodeRequest {
  string request_id = 1;
  int64 user_id = 2;
  string project_key = 3;
  string code = 4;
}

message RedeemCodeResponse {
  bool success = 1;
  int64 tokens_granted = 2;
  int32 credit_type = 3;
  ProjectBalance project_balance = 4;
  int64 public_permanent_tokens = 5;
  string error_message = 6;
}

message GetPublicBalanceRequest {
  int64 user_id = 1;
}

message GetPublicBalanceResponse {
  int64 public_permanent_tokens = 1;
}

message GetProjectBalanceRequest {
  string project_key = 1;
  int64 user_id = 2;
}

message GetProjectBalanceResponse {
  ProjectBalance balance = 1;
}

message ConvertPublicToProjectRequest {
  string request_id = 1;
  int64 user_id = 2;
  string project_key = 3;
  int64 public_tokens = 4;
}

message ConvertPublicToProjectResponse {
  bool success = 1;
  int64 converted_public_tokens = 2;
  int64 converted_project_tokens = 3;
  int64 public_permanent_tokens = 4;
  string error_message = 5;
}

message GrantPublicTokensRequest {
  string request_id = 1;
  int64 user_id = 2;
  int64 tokens = 3;
  string reason = 4;
}

message GrantPublicTokensResponse {
  bool success = 1;
  int64 public_permanent_tokens = 2;
  string error_message = 3;
}

service BillingCheckinService {
  rpc Checkin(CheckinRequest) returns (CheckinResponse);
  rpc GetCheckinStatus(GetCheckinStatusRequest) returns (GetCheckinStatusResponse);
}

service BillingRedeemCodeService {
  rpc RedeemCode(RedeemCodeRequest) returns (RedeemCodeResponse);
}

service BillingBalanceService {
  rpc GetPublicBalance(GetPublicBalanceRequest) returns (GetPublicBalanceResponse);
  rpc GetProjectBalance(GetProjectBalanceRequest) returns (GetProjectBalanceResponse);
}

service BillingConversionService {
  rpc ConvertPublicToProject(ConvertPublicToProjectRequest) returns (ConvertPublicToProjectResponse);
}

service BillingGrantService {
  rpc GrantPublicTokens(GrantPublicTokensRequest) returns (GrantPublicTokensResponse);
}
